2004-07-14  Will Duquette  <will@wjduquette.com>

	* snit.tcl      Replaced %TYPE%::Snit_comptrace with
                        snit::RT.ComponentTrace.

			Replaced %TYPE%::Snit_cacheLookup with
			snit::RT.MethodCacheLookup

			Replaced %TYPE%::Snit_typeCacheLookup with
			snit::RT.TypemethodCacheLookup

	* snit.test	Added a test to verify that a widget's hull
			component cannot be altered once it is set.
	
	* roadmap.txt   Documents the internal structure of snit.tcl.
	
2004-07-11  Will Duquette  <will@wjduquette.com>

	* snit.tcl	Renamed a number of internal commands, for
	                clarity.  

			Refactored the standard method bodies
			out of the type definition and into the Snit
	                runtime using delegation.

			Defined snit::compile which compiles a 
			type definition into the Tcl script which
			actually defines the type.

	* snit.test     Added and modified appropriate tests.

	* README.txt    Added a bullet about snit::compile.

2004-07-05  Will Duquette  <will@wjduquette.com>

	* snit.tcl      Replaced the old method cacheLookup code with new
	                code based on command patterns.  All tests pass;
	                no test changes were needed.  All is now ready to
	                add the new "delegate method" "using" keyword.
	* dictionary.txt
	                This file documents Snit's private variables.
	                It's up-to-date, and checked in for the first
	                time.

	* snit.tcl      Implemented the new "using <pattern>" clause to
	* snit.test    	"delegate method", and added relevant tests.

	* snit.man      Documented the new "delegate method" syntax.
	* README.txt

2004-07-04  Will Duquette  <will@wjduquette.com>

	* snit.tcl      Re-implemented the option and method delegation 
	* snit.test     syntax so that the order of clauses is no longer
	                important.  Along the way, I made the relevant
			error messages more specific.

2004-06-26  Will Duquette  <will@wjduquette.com>
